# woditext

./: .gitignore  CMakeLists.txt  README.md  commongen.cpp  commongen.hpp  main.cpp  symboltable.hpp  woditext.g4
examples/: codeblocks.wod  simple.wod
ir/: commonevent.cpp  commonevent.hpp  commonfile.cpp  commonfile.hpp  doublestack.hpp  line.hpp
javatemp/: woditextBaseListener.java  woditextLexer.interp  woditextLexer.java  woditextLexer.tokens  woditextListener.java  woditextParser.java
lib/: woditext.interp  woditextBaseListener.cpp  woditextBaseListener.h  woditextBaseVisitor.cpp  woditextBaseVisitor.h  woditextLexer.cpp  woditextLexer.h  woditextLexer.interp  woditextListener.cpp  woditextListener.h  woditextParser.cpp  woditextParser.h  woditextVisitor.cpp  woditextVisitor.h
src/: commongen.hpp  main.cpp  symboltable.hpp  typechecker.hpp
src/ir/: commonevent.cpp  commonfile.cpp  commonfile.hpp  doublestack.hpp  line.hpp
